// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Configuration with component 1`] = `
{
  "__catalogConfig": true,
  "basePath": "/",
  "pageTree": [
    {
      "component": [Function],
      "id": 1,
      "imports": {},
      "pages": null,
      "path": "/",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": {},
      "path": "/*",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "pages": [
    {
      "component": [Function],
      "id": 1,
      "imports": {},
      "index": 0,
      "pages": null,
      "path": "/",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": {},
      "path": "/*",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "publicUrl": "",
  "responsiveSizes": [
    {
      "height": 640,
      "name": "small",
      "width": 360,
    },
    {
      "height": 768,
      "name": "medium",
      "width": 1024,
    },
    {
      "height": 900,
      "name": "large",
      "width": 1440,
    },
    {
      "height": 1080,
      "name": "xlarge",
      "width": 1920,
    },
  ],
  "specimens": {
    "audio": [Function],
    "code": [Function],
    "color": [Function],
    "color-palette": [Function],
    "download": [Function],
    "hint": [Function],
    "html": [Function],
    "image": [Function],
    "raw-code": [Function],
    "react": [Function],
    "table": [Function],
    "type": [Function],
    "video": [Function],
  },
  "theme": {
    "background": "#F9F9F9",
    "baseFontSize": 16,
    "bgDark": "#333333",
    "bgLight": "#F2F2F2",
    "brandColor": "#003B5C",
    "checkerboardPatternDark": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAFklEQVQI12NQBQF2EGAghQkmwXxSmADZJQiZ2ZZ46gAAAABJRU5ErkJggg==",
    "checkerboardPatternLight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAF0lEQVQI12P4BAI/QICBFCaYBPNJYQIAkUZftTbC4sIAAAAASUVORK5CYII=",
    "codeColor": "#00263E",
    "codeStyles": {
      "function": {
        "color": "#FF5555",
      },
      "keyword": {
        "color": "#3F7397",
      },
      "punctuation": {
        "color": "#535353",
      },
      "script": {
        "color": "#3F7397",
      },
      "string": {
        "color": "#00263E",
      },
      "tag": {
        "color": "#FF5555",
      },
    },
    "fontFamily": "'Roboto', sans-serif",
    "fontHeading": "'Roboto', sans-serif",
    "fontMono": "'Roboto Mono', monospace",
    "lightColor": "#D6D6D6",
    "linkColor": "#FF5555",
    "msRatio": 1.2,
    "navBarBackground": "#F2F2F2",
    "navBarTextColor": "#003B5C",
    "pageHeadingBackground": "#003B5C",
    "pageHeadingHeight": 200,
    "pageHeadingTextColor": "#fff",
    "sidebarColor": "#FFFFFF",
    "sidebarColorHeading": "#003B5C",
    "sidebarColorLine": "#EBEBEB",
    "sidebarColorText": "#003B5C",
    "sidebarColorTextActive": "#FF5555",
    "textColor": "#333333",
  },
  "title": "Catalog",
}
`;

exports[`Configuration with default theme and specimens 1`] = `
{
  "__catalogConfig": true,
  "basePath": "/",
  "pageTree": [
    {
      "id": 1,
      "imports": {},
      "pages": null,
      "path": "/",
      "scripts": [],
      "src": "overview.md",
      "styles": [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": {},
      "path": "/*",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "pages": [
    {
      "id": 1,
      "imports": {},
      "index": 0,
      "pages": null,
      "path": "/",
      "scripts": [],
      "src": "overview.md",
      "styles": [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": {},
      "path": "/*",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "publicUrl": "",
  "responsiveSizes": [
    {
      "height": 640,
      "name": "small",
      "width": 360,
    },
    {
      "height": 768,
      "name": "medium",
      "width": 1024,
    },
    {
      "height": 900,
      "name": "large",
      "width": 1440,
    },
    {
      "height": 1080,
      "name": "xlarge",
      "width": 1920,
    },
  ],
  "specimens": {
    "audio": [Function],
    "code": [Function],
    "color": [Function],
    "color-palette": [Function],
    "download": [Function],
    "hint": [Function],
    "html": [Function],
    "image": [Function],
    "raw-code": [Function],
    "react": [Function],
    "table": [Function],
    "type": [Function],
    "video": [Function],
  },
  "theme": {
    "background": "#F9F9F9",
    "baseFontSize": 16,
    "bgDark": "#333333",
    "bgLight": "#F2F2F2",
    "brandColor": "#003B5C",
    "checkerboardPatternDark": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAFklEQVQI12NQBQF2EGAghQkmwXxSmADZJQiZ2ZZ46gAAAABJRU5ErkJggg==",
    "checkerboardPatternLight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAF0lEQVQI12P4BAI/QICBFCaYBPNJYQIAkUZftTbC4sIAAAAASUVORK5CYII=",
    "codeColor": "#00263E",
    "codeStyles": {
      "function": {
        "color": "#FF5555",
      },
      "keyword": {
        "color": "#3F7397",
      },
      "punctuation": {
        "color": "#535353",
      },
      "script": {
        "color": "#3F7397",
      },
      "string": {
        "color": "#00263E",
      },
      "tag": {
        "color": "#FF5555",
      },
    },
    "fontFamily": "'Roboto', sans-serif",
    "fontHeading": "'Roboto', sans-serif",
    "fontMono": "'Roboto Mono', monospace",
    "lightColor": "#D6D6D6",
    "linkColor": "#FF5555",
    "msRatio": 1.2,
    "navBarBackground": "#F2F2F2",
    "navBarTextColor": "#003B5C",
    "pageHeadingBackground": "#003B5C",
    "pageHeadingHeight": 200,
    "pageHeadingTextColor": "#fff",
    "sidebarColor": "#FFFFFF",
    "sidebarColorHeading": "#003B5C",
    "sidebarColorLine": "#EBEBEB",
    "sidebarColorText": "#003B5C",
    "sidebarColorTextActive": "#FF5555",
    "textColor": "#333333",
  },
  "title": "Catalog",
}
`;

exports[`Configuration with nested pages 1`] = `
{
  "__catalogConfig": true,
  "basePath": "/",
  "pageTree": [
    {
      "id": 1,
      "imports": {},
      "pages": [
        {
          "id": 2,
          "imports": {},
          "pages": null,
          "path": "/foo",
          "scripts": [],
          "src": "foo.md",
          "styles": [],
          "superTitle": "Overview",
          "title": "Foo",
        },
        {
          "id": 3,
          "imports": {},
          "pages": null,
          "path": "/bar",
          "scripts": [],
          "src": "bar.md",
          "styles": [],
          "superTitle": "Overview",
          "title": "Bar",
        },
      ],
      "path": null,
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    {
      "component": [Function],
      "hideFromMenu": true,
      "id": 4,
      "imports": {},
      "path": "/*",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "pages": [
    {
      "id": 2,
      "imports": {},
      "index": 0,
      "pages": null,
      "path": "/foo",
      "scripts": [],
      "src": "foo.md",
      "styles": [],
      "superTitle": "Overview",
      "title": "Foo",
    },
    {
      "id": 3,
      "imports": {},
      "index": 1,
      "pages": null,
      "path": "/bar",
      "scripts": [],
      "src": "bar.md",
      "styles": [],
      "superTitle": "Overview",
      "title": "Bar",
    },
    {
      "component": [Function],
      "hideFromMenu": true,
      "id": 4,
      "imports": {},
      "path": "/*",
      "scripts": [],
      "styles": [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "publicUrl": "",
  "responsiveSizes": [
    {
      "height": 640,
      "name": "small",
      "width": 360,
    },
    {
      "height": 768,
      "name": "medium",
      "width": 1024,
    },
    {
      "height": 900,
      "name": "large",
      "width": 1440,
    },
    {
      "height": 1080,
      "name": "xlarge",
      "width": 1920,
    },
  ],
  "specimens": {
    "audio": [Function],
    "code": [Function],
    "color": [Function],
    "color-palette": [Function],
    "download": [Function],
    "hint": [Function],
    "html": [Function],
    "image": [Function],
    "raw-code": [Function],
    "react": [Function],
    "table": [Function],
    "type": [Function],
    "video": [Function],
  },
  "theme": {
    "background": "#F9F9F9",
    "baseFontSize": 16,
    "bgDark": "#333333",
    "bgLight": "#F2F2F2",
    "brandColor": "#003B5C",
    "checkerboardPatternDark": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAFklEQVQI12NQBQF2EGAghQkmwXxSmADZJQiZ2ZZ46gAAAABJRU5ErkJggg==",
    "checkerboardPatternLight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAF0lEQVQI12P4BAI/QICBFCaYBPNJYQIAkUZftTbC4sIAAAAASUVORK5CYII=",
    "codeColor": "#00263E",
    "codeStyles": {
      "function": {
        "color": "#FF5555",
      },
      "keyword": {
        "color": "#3F7397",
      },
      "punctuation": {
        "color": "#535353",
      },
      "script": {
        "color": "#3F7397",
      },
      "string": {
        "color": "#00263E",
      },
      "tag": {
        "color": "#FF5555",
      },
    },
    "fontFamily": "'Roboto', sans-serif",
    "fontHeading": "'Roboto', sans-serif",
    "fontMono": "'Roboto Mono', monospace",
    "lightColor": "#D6D6D6",
    "linkColor": "#FF5555",
    "msRatio": 1.2,
    "navBarBackground": "#F2F2F2",
    "navBarTextColor": "#003B5C",
    "pageHeadingBackground": "#003B5C",
    "pageHeadingHeight": 200,
    "pageHeadingTextColor": "#fff",
    "sidebarColor": "#FFFFFF",
    "sidebarColorHeading": "#003B5C",
    "sidebarColorLine": "#EBEBEB",
    "sidebarColorText": "#003B5C",
    "sidebarColorTextActive": "#FF5555",
    "textColor": "#333333",
  },
  "title": "Catalog",
}
`;
